--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -952,7 +952,9 @@ table tr:hover .table-links {
 
 @media (max-width: 575.98px) {
   .table-responsive table {
-    min-width: 800px; } }
+    min-width: 800px;
+    display: table;
+     } }
 
 /* 3.7 Tooltip */
 .tooltip {
