--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2104,7 +2104,7 @@ pre code {
 }
 
 .table-responsive {
-  display: block;
+  display: table;
   width: 100%;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
